# weighterm

./: Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  pty.rs  renderer.rs  terminal.rs
